# flexpool-ethminer-dashboard

./: Readme.md  docker-compose.dev.yaml  settings.env
api/: .gitignore  Dockerfile.dev  mypy.ini  pyproject.toml  settings.env
api/api/: __init__.py  main.py  settings.py  sourceconnection.py
api/api/models/: filtered.py  getstatdetail.py  pong.py
dashboard/: .dockerignore  Dockerfile.dev  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.css  App.js  Widgets.js  setupProxy.js
dashboard/src/layouts/: Dashboard.js  Device.js  ShareStats.js
dashboard/src/widgets/: HashrateDialWidget.js  HeatBar.js  ShareSinceLastLine.js  ShareStatLine.js  TopBarWidget.js
